Fix overflow bug

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -3,11 +3,15 @@ html, body {
   padding: 0;
 }
 
-div.point {
-  position: fixed;
-  width: 2px;
-  height: 2px;
-  margin-left: -1px;
-  margin-top: -1px;
-  background-color: #000000;
+.svg-wrapper {
+  overflow: hidden;
+
+  &-fullscreen {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+  }
 }
